# Texas-Philosopher

./: .gitignore  CLAUDE.md  DEVLOG.md  README.md
conversation_log/: 2026-06-08.md  2026-06-09.md
docs/: Claude_Code_德州哲学家_完整开发提示词.md  德州哲学家 v2 — 完全重建方案.md  核岛智询协同开发手册.md
v2/: DEV_MANUAL.md  MANUAL_TEST_PLAN.md  TAURI_BUILD.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  玩家手册.md
v2/src/: App.ts  main.ts  style.css
v2/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
v2/src-tauri/capabilities/: default.json
v2/src-tauri/icons/: README.md
v2/src-tauri/src/: main.rs
v2/src/ai/: decision-engine.ts  deepseek-client.ts  prompt-builder.ts  rule-fallback.ts
v2/src/ai/personas/: index.ts  nf-empaths.ts  nt-strategists.ts  sj-traditionalists.ts  (+1 more)
v2/src/audio/: sound-manager.ts
v2/src/engagement/: daily.ts  hearts.ts  leagues.ts  streak.ts
v2/src/engine/: constants.ts  deck.ts  ev-calc.ts  hand-eval.ts  poker-engine.ts  pot-manager.ts
v2/src/persistence/: save-system.ts
v2/src/progression/: ascension.ts  boss-encounters.ts  map-generator.ts  meta-unlocks.ts  philosophy-tools.ts
v2/src/training/: aid-controller.ts  ev-reveal.ts  feedback-engine.ts  leak-detector.ts  report-card.ts
v2/src/types/: ai.ts  card.ts  game.ts  progression.ts  training.ts
v2/src/ui/: store.ts
v2/src/utils/: format.ts  math.ts  random.ts
web_app/: README.md  index.html  styles.css  启动游戏.bat  玩家指南.md
web_app/js/: ai_engine.js  cards.js  daily.js  game.js  handeval.js  llm.js  main.js  map.js  mutations.js  scoring.js  skills.js  ui.js
(+16 files in other folders)
