[package]
name = "texas-philosopher"
version = "2.0.0"
description = "德州哲学家 — Texas Philosopher Poker Training"
authors = ["Vincent MAO"]
edition = "2021"

[lib]
name = "texas_philosopher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
